# budget-api

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  token.txt
.qwen/: settings.json
api/: app.py
api/asaas/: Asaas.py
api/core/: database.py  settings.py
api/exceptions/: __init__.py  clients.py  companys.py  employees.py  map_exceptions.py  materials.py  plans.py  prices.py  segments.py  services.py  suppliers.py  users.py
api/features/: __init__.py  all.py
api/models/: __init__.py  companys.py  employees.py  legal_entity.py  legal_entitys.py  materials.py  plans.py  prices.py  segments.py  services.py  subscriptions.py  users.py
api/repositories/: __init__.py  clients.py  companys.py  employees.py  legal_entity.py  materials.py  plans.py  precifications.py  prices.py  segments.py  subscriptions.py  suppliers.py  users.py
api/routers/: auth.py  clients.py  companys.py  employees.py  materials.py  plans.py  prices.py  segments.py  services.py  suppliers.py  users.py
api/schemas/: __init__.py  auth.py  clients.py  companys.py  employees.py  legal_entity.py  materials.py  plans.py  prices.py  segments.py  services.py  subscriptions.py  suppliers.py  users.py
api/security/: __init__.py  dependencies.py  jwt.py  password.py
api/services/: companys.py  employees.py  materials.py  plans.py  precifications.py  prices.py  segments.py  suppliers.py  users.py
migrations/versions/: 06502cc545fe_adicionando_relacionamente_material_.py  1a49e39bdca0_adicionando_services_e_suas_relações.py  (+11 more)
tests/: conftest.py
(+34 files in other folders)
