[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "budget-api"
version = "0.1.0"
description = "Sistema para gerenciamento de orçamentos, precificação de serviços, pagamentos, recebimentos, faturamento e projetos"
requires-python = ">=3.10"
dependencies = [
    "aiomysql==0.3.2",
    "alembic==1.18.4",
    "fastapi==0.135.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "sqlalchemy==2.0.48",
    "uvicorn==0.42.0",
    "pyjwt==2.12.1",
    "pytz==2026.1.post1",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "httpx==0.28.1",
    "ruff==0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=api --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["api"]
omit = ["*/__init__.py", "*/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
